src/test/compile-fail/super-at-top-level.rs
use super::f; //~ ERROR failed to resolve import

fn main() {
}
